--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,13 +1,16 @@
-theme = rose-pine
-background = 1A1B26
+theme = Rose Pine
+background = 0D1017
 cursor-color = B62EB2
 
+font-family = "Berkeley Mono"
 font-family = "Symbols Nerd Font Mono"
-font-family = "JetBrains Mono"
 font-size = 13
 font-feature = -liga
 font-feature = -calt
 font-feature = -dlig
+shell-integration-features = no-cursor,sudo,no-title
+
+adjust-cell-height = 1
 
 macos-titlebar-style = tabs
 title = " "
@@ -15,4 +18,7 @@ title = " "
 mouse-hide-while-typing = true
 
 window-save-state = always
+
 window-padding-balance = true
+
+quit-after-last-window-closed = true
