--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,98 +1,101 @@
 #-------------------------------------------------
 # Configuration
 #-------------------------------------------------
-
 # Use Vi mode
 setw -g mode-keys vi
-
 # Increase scrollback buffer size
 set -g history-limit 10000
-
+# Set tms sessions 
+set -g status-right " #(tms sessions)"
 # Start window and pane numbering from 1 for easier switching
 set -g base-index 1
 setw -g pane-base-index 1
-
 # Allow automatic renaming of windows
 set -g allow-rename on
-
 # Renumber windows when one is removed.
 set -g renumber-windows on
-
 # Enable undercurl
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
-
 # Enable undercurl colors
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-
 # Allow the mouse to resize windows and select tabs
 set -g mouse on
-
 # Allow tmux to set the terminal title
 set -g set-titles on
-
 # Monitor window activity to display in the status bar
 setw -g monitor-activity on
-
 # A bell in another window should cause a bell in the current window
 set -g bell-action any
-
 # Don't show distracting notifications
 set -g visual-bell off
 set -g visual-activity off
-
 # Focus events enabled for terminals that support them
 set -g focus-events on
-
 # Useful when using sharing a session with different size terminals
 setw -g aggressive-resize on
-
 # don't detach tmux when killing a session
 set -g detach-on-destroy off
-
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -s escape-time 0
 
+#--------------------------------------------------------------------------
+# Terminal
+#--------------------------------------------------------------------------
+set -g default-terminal "tmux-256color"
 set -as terminal-features ",*:RGB"
-# set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 #--------------------------------------------------------------------------
 # Status line
 #--------------------------------------------------------------------------
-
-# Custom window flags
-# window_default_symbol ''
-# window_active_symbol '*'
-# window_activity_symbol '#'               
-# window_bell_symbol '!'
-# window_last_symbol '-'
-# window_silence_symbol '~'
-# window_zoomed_symbol 'Z'
-
-# Status line customisation
+# Core status line
+set-option -g status-style "bg=default fg=#666666"
+set-option -g status-position bottom
+set-option -g status-interval 1
 set-option -g status-left-length 200
-set-option -g status-left " #{session_name}  "
-# add git branch to status line
-set-option -g status-style "bg=default"
-set -g status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)"
-set-option -g window-status-format "#{window_index}:#{window_name}#{window_flags} " 
-set-option -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
-set-option -g window-status-current-style "fg=#e1a345" 
-set-option -g window-status-last-style "fg=#936a2e"
-set-option -g window-status-activity-style none
+set-option -g status-right-length 200
 
-# set -g status-justify centre
-set -g status-justify left
+# Left status - session name with subtle padding
+set-option -g status-left "#{?client_prefix,#[fg=#e1a345],#[fg=#666666]}#[bg=default] #{session_name} "
+
+# Window status - middle section
+set-option -g window-status-separator ""
+set-option -g window-status-format "#[fg=#666666,bg=default] #{window_index}:#{window_name} "
+set-option -g window-status-current-format "#[fg=#e1a345,bg=default,bold] #{window_index}:#{window_name} "
+set-option -g window-status-activity-style none
+set-option -g window-status-bell-style none
+set-option -g window-status-style "fg=#666666,bg=default"
+set-option -g window-status-current-style "fg=#e1a345,bg=default,bold"
+set-option -g window-status-last-style "fg=#936a2e,bg=default"
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{?#{==:#{pane_current_command},zsh},#{b:pane_current_path},#{pane_current_command}}'
+
+# Right status - git branch with icon
+set-option -g status-right "#[fg=#666666,bg=default] #[fg=#666666]󰊢 #[fg=#666666]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD || echo 'no git') "
+set-option -g status-justify left
+
+# Pane styling
+set-option -g pane-border-style "fg=#262626"
+set-option -g pane-active-border-style "fg=#404040"
+
+# Message styling
+set-option -g message-style "fg=#e1a345,bg=default"
+set-option -g message-command-style "fg=#e1a345,bg=default"
+
+# Selection styling
+set-option -g mode-style "fg=black,bg=#e1a345"
 
 #-------------------------------------------------
 # Key bindings
 #-------------------------------------------------
 set -g prefix C-a
 bind C-a send-prefix
-
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+bind o display-popup -E "tms"
+bind -n C-\\ display-popup -E "tms switch"
 
 # 'PREFIX r' to reload the config file
 unbind r
@@ -102,16 +105,19 @@ bind r source-file ~/.tmux.conf\; display-message '~/.tmux.conf reloaded'
 bind C-p previous-window
 bind C-n next-window
 
+
 # Move around panes like in vim
 bind -r h select-pane -L
 bind -r j select-pane -D
 bind -r k select-pane -U
 bind -r l select-pane -R
 
-# List of plugins
+#-------------------------------------------------
+# Plugins
+#-------------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
